WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277855
[Repaint] Inline box with layer fails to repaint
https://bugs.webkit.org/show_bug.cgi?id=277855
Summary
[Repaint] Inline box with layer fails to repaint
alan
Reported
2024-08-09 07:03:01 PDT
Created
attachment 472097
[details]
Test case see test case
Attachments
Test case
(298 bytes, text/html)
2024-08-09 07:03 PDT
,
alan
no flags
Details
Patch
(3.91 KB, patch)
2024-08-09 12:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(3.91 KB, patch)
2024-08-09 19:32 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(4.11 KB, patch)
2024-08-09 20:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-08-09 07:04:50 PDT
regressed with
280578@main
, processed with the revert at
281989@main
.
alan
Comment 2
2024-08-09 07:05:26 PDT
> regressed with
280578@main
, processed with the revert at
281989@main
.
progressed even
alan
Comment 3
2024-08-09 12:22:08 PDT
Created
attachment 472103
[details]
Patch
alan
Comment 4
2024-08-09 19:32:45 PDT
Created
attachment 472109
[details]
Patch
Simon Fraser (smfr)
Comment 5
2024-08-09 19:50:00 PDT
Comment on
attachment 472109
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=472109&action=review
> COMMIT_MESSAGE:6 > +Let's move RenderText's repaint handling from dirtyLinesFromChangedChild to RenderBlockFlow::layoutModernLines.
More words about how this fixes the bug, please!
> Source/WebCore/rendering/RenderBlockFlow.cpp:3886 > +static void issueFullRepaintOnParentInlineBoxBeforeLayoutIfNeeded(const RenderText& renderer)
I wonder if this name should have "layer" in it somewhere.
> Source/WebCore/rendering/RenderBlockFlow.cpp:3890 > + // Additionally, repaint at the block level (#3) takes care of regular inflow content.
in-flow
> Source/WebCore/rendering/RenderBlockFlow.cpp:3893 > + // share the same layer.
I feel like this comment should continue to say what this code is doing to address those shortcomings.
alan
Comment 6
2024-08-09 20:04:19 PDT
Created
attachment 472110
[details]
[fast-cq]Patch
EWS
Comment 7
2024-08-10 05:14:01 PDT
Committed
282082@main
(9d8503d5ba1a): <
https://commits.webkit.org/282082@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472110
[details]
.
Radar WebKit Bug Importer
Comment 8
2024-08-10 05:15:15 PDT
<
rdar://problem/133596199
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug