[Repaint] dirtyLinesFromChangedChild should not issue repaint for inline content https://bugs.webkit.org/show_bug.cgi?id=277855

Reviewed by Simon Fraser.

dirtyLinesFromChangedChild is a really obscure place to issue repaint on inline content.
Let's move it to RenderBlockFlow::layoutModernLines where block level repaint happens too.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::issueFullRepaintOnParentInlineBoxBeforeLayoutIfNeeded):
(WebCore::RenderBlockFlow::layoutModernLines):
* Source/WebCore/rendering/RenderLineBoxList.cpp:
(WebCore::RenderLineBoxList::dirtyLinesFromChangedChild):

Canonical link: https://commits.webkit.org/282082@main